--- a/src/components/Dropdown/dropdown.css
+++ b/src/components/Dropdown/dropdown.css
@@ -29,6 +29,20 @@
 
   .dropdown-item {
       padding: 10px;
+      line-height: 1.5em;
+  }
+
+  .dropdown-list-item {
+      position: relative;
+      line-height: 1.5em;
+      top: -12px;
+  }
+
+  .ul-list-item {
+      list-style: none;
+      margin-block-start: 0em;
+      margin-block-end: 0em;
+      padding-inline-start: 10px;
   }
 
   .icon {
