--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -2,6 +2,9 @@
     display: flex;
     justify-content: center;
     padding: 30px 70px;
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .banner_title {
@@ -21,4 +24,29 @@
     filter: brightness(55%);
     background-position: center;
     background-size: cover;
+    object-fit: cover;
+}
+
+/* Responsive tablet */
+@media screen and (max-width: 960px) {
+    .banner_title {
+        font-size: 30px;
+    }
+}
+
+/* Responsive mobile */
+@media screen and (max-width: 650px) {
+    .banner_container {
+        padding: 30px 30px;
+    }
+
+    .banner_wrapper {
+        height: 140px;
+    }
+
+    .banner_title {
+        font-size: 20px;
+        width: 200px;
+        text-align: start;
+    }
 }
