--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -2,4 +2,16 @@
     display: flex;
     flex-direction: column;
     margin: 30px 70px;
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px 70px;
+}
+
+/* Responsive mobile */
+@media screen and (max-width: 650px) {
+    .dropdown_container {
+        margin: 30px 30px;
+        padding: 0px 0px;
+    }
 }
