--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -2,9 +2,10 @@
     display: flex;
     justify-content: center;
     margin: 30px 70px;
-    padding: 30px 0px;
-    border-radius: 20px;
-    background-color: #F6F6F6;
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px 70px;
 }
 
 .card_wrapper {
@@ -12,4 +13,29 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    padding: 30px;
+    border-radius: 20px;
+    background-color: #F6F6F6;
+}
+
+/* Responsive tablet */
+@media screen and (max-width: 980px) {
+    .card_container {
+        margin: 0px 0px;
+    }
+
+    .card_wrapper {
+        background-color: transparent;
+        flex-direction: column;
+        padding: 0px;
+        width: 100%;
+    }
+}
+
+/* Responsive mobile */
+@media screen and (max-width: 650px) {
+    .card_container {
+        margin: 0px 30px;
+        padding: 0px 0px;
+    }
 }
