--- a/src/pages/Logement/logement.css
+++ b/src/pages/Logement/logement.css
@@ -1,13 +1,22 @@
 .logement_container {
     display: flex;
+    padding: 0px 70px;
     justify-content: space-between;
+    align-items: center;
     margin: 55px 70px;
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .span_dropdown_container {
     margin: 30px 70px;
     display: flex;
     flex-direction: row;
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px 70px;
 }
 
 .description {
@@ -23,4 +32,45 @@
 .host-rating {
     display: flex;
     flex-direction: column;
+}
+
+/* Responsive tablet */
+@media screen and (max-width: 900px) {
+    .host-rating {
+        width: 450px;
+        align-items: end;
+    }
+}
+
+/* Responsive mobile */
+@media screen and (max-width: 650px) {
+    .logement_container {
+        justify-content: center;
+        align-items: flex-start;
+        margin: 25px 30px;
+        flex-direction: column;
+        padding: 0px 0px;
+    }
+
+    .host-rating {
+        width: 100%;
+        margin-top: 25px;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .span_dropdown_container {
+        margin: 0px 30px;
+        flex-direction: column;
+        padding: 0px 0px;
+    }
+
+    .description {
+        margin-right: 0px;
+    }
+
+    .equipements {
+        margin-left: 0px;
+    }
 }
