--- a/src/pages/NotFound/notfound.css
+++ b/src/pages/NotFound/notfound.css
@@ -23,3 +23,34 @@
     text-decoration: none;
     color: #FF6060;
 }
+
+/* Responsive tablet */
+@media screen and (max-width: 900px) {
+    .text-404 {
+        font-size: 25px;
+    }
+
+    .title-404 {
+        margin-top: 100px;
+        font-size: 150px;
+    }
+
+    .div-404 {
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
+}
+
+/* Responsive mobile */
+@media screen and (max-width: 650px) {
+    .title-404 {
+        margin-top: 150px;
+        font-size: 120px;
+    }
+
+    .text-404 {
+        font-size: 22px;
+    }
+}
